--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bw_Upload</title>
-    <base href="https://aerostain.github.io/250523_Bwasm_Ubigeo/" />
+    <base href="https://aerostain.github.io/250523_Ubigeo_Wasm/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
